cambios para funcion de advertenica, errores
